--- a/src/app/dropdown-page/dropdown-page.component.html
+++ b/src/app/dropdown-page/dropdown-page.component.html
@@ -1,4 +1,4 @@
-<form>
+<!-- <form>
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="inputEmail4">Email</label>
@@ -43,4 +43,64 @@
       </div>
     </div>
     <button type="submit" class="btn btn-primary">Sign in</button>
-  </form>
+  </form> -->
+
+
+  <div class="container main">
+    <label for="" class="main__title">
+      Finding The Falcone
+    </label>
+    <label for="" class="main__subtitle">
+      Select planets you wanted to search in :
+    </label>
+
+    <div class="row mb-5 main__option">
+      <div class="col">
+        <div>
+          <label class="w-100" for="">Destination - 1</label>
+          <datalist id="dest-1">
+              <option>First option</option>
+              <option>Second Option</option>
+          </datalist>
+          <input placeholder="select" autoComplete="on" list="dest-1"/> 
+        </div>
+      </div>
+      <div class="col">
+        <div>
+          <label class="w-100" for="">Destination - 2</label>
+          <datalist id="dest-2">
+            <option value="select" selected></option>
+              <option>First option</option>
+              <option>Second Option</option>
+          </datalist>
+          <input placeholder="select" class="px-2" autoComplete="on" list="dest-2"/> 
+        </div>
+      </div>
+      <div class="col">
+        <div>
+          <label class="w-100" for="">Destination - 3</label>
+          <datalist id="dest-3">
+            <option value="select" selected></option>
+              <option>First option</option>
+              <option>Second Option</option>
+          </datalist>
+          <input placeholder="select" class="px-2" autoComplete="on" list="dest-3"/> 
+        </div>
+      </div>
+      <div class="col">
+        <div>
+          <label class="w-100" for="">Destination - 4</label>
+          <datalist id="dest-4">
+            <option value="select" selected></option>
+              <option>First option</option>
+              <option>Second Option</option>
+          </datalist>
+          <input placeholder="select" class="px-2" autoComplete="on" list="dest-4"/> 
+        </div>
+      </div>
+    </div>
+
+    <button class="btn-main">
+      Find Falcone
+    </button>
+  </div>
